--- a/index.html
+++ b/index.html
@@ -7,6 +7,72 @@
 		<link rel="stylesheet" href="assets/css/style.css">	
 	</head>
 	<body>
+	<!-- seccion bienvenida -->
+		<section id="bienvenida">
+			<div class="logo">
+				<img class="logo" src="assets/img/logo.png" alt="logo">
+			</div>
+			<div class="mensaje">
+				<img class="mensaje" src="assets/img/bienvenida.png" alt="">
+			</div>
+		</section>
+	<!-- seccion newsletter -->
+		<section class="color">
+			<div class="newsletter">
+				<button id="suscribirse" url="newsletter.html" target="_blank">suscribete a nuestro newsletter</button>
+			</div>
+		</section>
 
+	<!-- seccion nuestra pasión -->
+		<section id="about">
+			<div class="logo">
+				<img class="logo" src="assets/img/logo.png" alt="logo">
+			</div>
+			<div class="contenido">
+				<h1>Nuestra <br> Pasión </h1>
+				<p>El té es una bebida utilizada habitualmente por la medicina natural de las civilizaciones orientales para aprovechar sus propiedades terapéuticas. Algunas de sus versiones son:</p>
+			</div>
+		</section>
+
+	<!-- sobre el té -->
+		<section class="color">
+			<div class="te-diferentes">
+				<div class="tipo-de-te">
+					<h2>Negro</h2>
+					<p>Disminuye la absorción de colesterol y reduce la posibilidad de sufrir enfermedades cardiovasculares.</p>
+				</div>
+				<div class="tipo-de-te">
+					<h2>Verde</h2>
+					<p>Reduce la formación de coágulos anormales favoreciendo nuestro corazón, además disminuye los niveles de azúcar.</p>
+				</div>
+				<div class="tipo-de-te">
+					<h2>Rojo</h2>
+					<p>Para la depresión, la melancolía y el mal humor. Adicionalmente facilita la digestión, ayuda a desintoxicar el organismo.</p>
+				</div>
+				<div class="tipo-de-te">
+					<h2>Blanco</h2>
+					<p>Disminuye la actividad de las enzimas que disminuyen la producción de elastina y colágeno en nuestra piel.</p>
+				</div>
+				<div class="tipo-de-te">
+					<h2>Oolong</h2>
+					<p>Puede disminuir el nivel de colesterol en sangre y también está recomendado para bajar de peso.</p>
+				</div>
+			</div>
+		</section>
+
+	<!-- Sección disfruta -->
+		<section id="disfruta">
+			<div class="logo">
+				<img class="logo" src="assets/img/logo.png" alt="logo">
+			</div>
+			<div class="contenido">
+				<h1>Disfruta <br> el sabor del té</h1>
+			</div>
+		</section>
+
+	<!-- footer -->
+		<footer>
+			<p>Té Encanto: Av. Italia 1317, Providencia.</p>
+		</footer>
 	</body>
-</html>
+</htmlt
